working with api

--- a/src/api.html
+++ b/src/api.html
@@ -9,6 +9,23 @@
 </head>
 
 <body>
+    <table style="border: 1px solid black;">
+        <thead>
+            <tr>
+                <td>2</td>
+                <td>2</td>
+                <td>2</td>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>2</td>
+                <td>2</td>
+                <td>2</td>
+            </tr>
+        </tbody>
+    </table>
+
     <script>
         let url = 'https://pro-api.coinmarketcap.com/v1/cryptocurrency/listings/latest',
             query = "?CMC_PRO_API_KEY="
