--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,14 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="icon" href="%PUBLIC_URL%/crypto.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <meta name="description" content="Web Application for Live Cryptocurrencies Quotes" />
+  <meta name="keywords" content="crypto, cryptocurrencies, bitcoin, ethereum, tether, binance">
+  <meta name="author" content="Tafil Osmani">
+  <meta property="og:title" content="Cryptocurrencies Market">
+  <meta property="og:image" content="%PUBLIC_URL%/crypto.png">
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -27,7 +30,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>React App</title>
+  <title>Crypto Market</title>
 </head>
 
 <body>
