--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="%PUBLIC_URL%/crypto.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web Application for Live Cryptocurrencies Quotes" />
+  <meta name="description" content="Web Application Live Cryptocurrencies Quotes" />
   <meta name="keywords" content="crypto, cryptocurrencies, bitcoin, ethereum, tether, binance">
   <meta name="author" content="Tafil Osmani">
   <meta property="og:title" content="Cryptocurrencies Market">
